upload banner image

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/images/banner_haddock_ipsum.jpg": "/images/banner_haddock_ipsum.jpg",
+    "/images/banner_haddock_ipsum.jpg:Zone.Identifier": "/images/banner_haddock_ipsum.jpg:Zone.Identifier"
 }
