extract html to components and create 404 custom page

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,8 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
+    "/images/404.jpg": "/images/404.jpg",
+    "/images/404.jpg:Zone.Identifier": "/images/404.jpg:Zone.Identifier",
     "/images/banner_haddock_ipsum.jpg": "/images/banner_haddock_ipsum.jpg",
     "/images/banner_haddock_ipsum.jpg:Zone.Identifier": "/images/banner_haddock_ipsum.jpg:Zone.Identifier"
 }
