--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "gumlet/php-image-resize": "2.0.*",
         "guzzlehttp/guzzle": "^7.2",
+        "intervention/image": "^2.7",
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "livewire/livewire": "^2.10",
-        "gumlet/php-image-resize": "2.0.*"
+        "livewire/livewire": "^2.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
